--- a/public/index.html
+++ b/public/index.html
@@ -164,7 +164,13 @@
          height: auto;
          margin: 10px;
          object-fit: cover;
+         display: block; /* Add this line to display images vertically */
          }
+
+         #image-gallery {
+         overflow: auto;
+         }
+
          /* button {
          background-color: #007BFF;
          color: white;
