--- a/public/index.html
+++ b/public/index.html
@@ -164,8 +164,11 @@
          height: auto;
          margin: 10px;
          object-fit: cover;
-         display: block; /* Add this line to display images vertically */
+         display: block;
+         /* border: 1px solid red; */
+         background-color: rgba(0, 0, 0, 0.1); /* Add a background color to check for invisible images */
          }
+
 
          #image-gallery {
          overflow: auto;
