--- a/public/index.html
+++ b/public/index.html
@@ -114,6 +114,16 @@
                   <li>Produced comprehensive technical documentation, & facilitated multiple meetings to demonstrate findings.</li>
                </ul>
                <p><a href="https://www.informasoftware.com/">Link to company</a></p>
+               <h2 class="major">Papa Diesel's BBQ</h2>
+               <span class="image main"><img src="images/PDB.jpg" alt="" /></span>
+               <p><strong>Web Developer / Food Truck Staff</strong><br>
+                  August 2021 – Present | Orlando, FL
+               </p>
+               <ul>
+                  <li>Helped create an updated, more functional website for company using Bootstrap, HTML, CSS, and JavaScript</li>
+                  <li>Assists with various duties aboard the food truck such as, taking orders, preparing food, cutting meats, carrying and loading equipment, daily sanitization of the work environment, and overall quality assurance</li>
+               </ul>
+               <p><a href="https://www.facebook.com/PapaDieselsBBQ/">Link to company</a></p>
             </article>
             <!-- Projects -->
             <article id="Projects">
