--- a/public/index.html
+++ b/public/index.html
@@ -124,6 +124,25 @@
                   <li>Assists with various duties aboard the food truck such as, taking orders, preparing food, cutting meats, carrying and loading equipment, daily sanitization of the work environment, and overall quality assurance</li>
                </ul>
                <p><a href="https://www.facebook.com/PapaDieselsBBQ/">Link to company</a></p>
+               <h2 class="major">NBC Sports</h2>
+               <span class="image main"><img src="images/NBC.png" alt="" /></span>
+               <p><strong>Microphone Operator</strong><br>
+                  March 2020, 2021, 2022, 2023 | Orlando, FL | (SEASONAL)
+               </p>
+               <ul>
+                  <li>Assisted the NBC PGA Golf Tour, providing sound and running wireless microphones for a nationally televised broadcast featuring the world’s best at the annual Arnold Palmer Invitational Tournament</li>
+               </ul>
+               <p><a href="https://www.nbcsports.com/">Link to company</a></p>
+               <h2 class="major">Chess Instructor</h2>
+               <span class="image main"><img src="images/teacher.jpg" alt="" /></span>
+               <p><strong>Chess Instructor at Local Elementary School</strong><br>
+                  January 2019 - June 2019 | Orlando, FL
+               </p>
+               <ul>
+                  <li>Former competitive chess player</li>
+                  <li>Hired by old coach to replace him to lead and teach the chess club </li>
+                  <li>Taught elementary school kids in an after-school setting</li>
+               </ul>
             </article>
             <!-- Projects -->
             <article id="Projects">
@@ -170,6 +189,35 @@
                </ul>
                <p><strong>Link to project:</strong> <a href="http://www.professorcontacts.com/">http://www.professorcontacts.com/</a></p>
                <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/Professor-Contacts">https://github.com/cirillojon/Professor-Contacts</a></p>
+               <h2 class="major">Competitons</h2>
+               <h2 class="major">Kaggle</h2>
+               <span class="image main"><img src="images/kaggle.png" alt="" /></span>
+               <p><strong> Kaggle Machine Learning Competitions | 2022</strong> </p>
+               <p>Tools & Technologies: Python, NumPy, Sklearn, Tensorflow, Keras, and Pandas </p>
+               <ul>
+                  <li>Built a Convolutional Neural Network that classifies clothing on the Fashion-MNIST dataset with 94% accuracy</li>
+                  <li>Constructed a Sequential Neural Network that predicts the atomization energy of molecules on the QM7 dataset</li>
+               </ul>
+               <p><strong>Link to Kaggle Website:</strong> <a href="https://www.kaggle.com/competitions">https://www.kaggle.com/competitions</a></p>
+               <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/Neural-Networks">https://github.com/cirillojon/Neural-Networks</a></p>
+               <h2 class="major">IBM Z Xplore</h2>
+               <span class="image main"><img src="images/IBM.png" alt="" /></span>
+               <p><strong> IBM Master the Mainframe Competiton | 2018</strong> </p>
+               <p>Tools & Technologies: REXX, COBOL, VSAM, REGEX, JCL, Python, Db2, SQL </p>
+               <ul>
+                  <li>Stage 2 Finalist in the annual IBM Master the Mainframe Competition now known as ‘IBM Z Xplore’</li>
+                  <li>Received hands-on experience within the z/OS system utilizing a variety of technologies and programming languages</li>
+               </ul>
+               <p><strong>Link to Competition Website:</strong> <a href="https://www.ibm.com/z/resources/zxplore">https://www.ibm.com/z/resources/zxplore</a></p>
+               <h2 class="major">MIT Zero Robotics</h2>
+               <span class="image main"><img src="images/Zero.png" alt="" /></span>
+               <p><strong> MIT Zero Robotics Competition | 2017</strong> </p>
+               <p>Tools & Technologies: C, SPHERES Simulator </p>
+               <ul>
+                  <li> Member of team that reached final stages in the tournament
+                  <li> Write code for satellites on the International Space Station to complete challenges</li>
+               </ul>
+               <p><strong>Link to Competition Website:</strong> <a href="https://zerorobotics.mit.edu/">https://zerorobotics.mit.edu/</a></p>
             </article>
             <!-- Education & Skills -->
             <article id="Education">
