Add daily nasa photo

--- a/public/index.html
+++ b/public/index.html
@@ -371,6 +371,9 @@
                      <button type="submit">Send</button>
                   </form>
                </div>
+               <!-- NASA APOD -->
+               <h2 class="major">NASA Astronomy Picture of the Day</h2>
+               <div id="nasa-apod" class="widget"></div>
             </article>
             <!-- Photography -->
             <article id="Photography">
@@ -441,5 +444,6 @@
       <script src="assets/js/chat.js"></script>
       <script src="assets/js/loadImageGallery.js"></script>
       <script src="assets/js/threejsSetup.js"></script>
+      <script src="nasa-apod.js"></script>
    </body>
 </html>
