--- a/public/index.html
+++ b/public/index.html
@@ -372,7 +372,7 @@
                   </form>
                </div>
                <!-- NASA APOD -->
-               <h2 class="major">NASA Astronomy Picture of the Day</h2>
+               <h2 class="major">NASA A.P.O.T.D.</h2>
                <div id="nasa-apod" class="widget"></div>
             </article>
             <!-- Photography -->
@@ -444,6 +444,6 @@
       <script src="assets/js/chat.js"></script>
       <script src="assets/js/loadImageGallery.js"></script>
       <script src="assets/js/threejsSetup.js"></script>
-      <script src="nasa-apod.js"></script>
+      <script src="assets/js/nasa-apod.js"></script>
    </body>
 </html>
