--- a/public/index.html
+++ b/public/index.html
@@ -372,14 +372,8 @@
                   </form>
                </div>
                <!-- NASA APOD -->
-               <h2 class="major">NASA A.P.O.T.D.</h2>
+               <h2 class="major">NASA Daily Pic</h2>
                <div id="nasa-apod" class="widget"></div>
-               <!-- Mars Rover Photos -->
-               <h2 class="major">MarsRoverPics</h2>
-               <div id="mars-rover-photos" class="widget"></div>
-               <!-- Earth Asset Imagery -->
-               <h2 class="major">EarthImagery</h2>
-               <div id="earth-asset" class="widget"></div>
             </article>
             <!-- Photography -->
             <article id="Photography">
