--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
          .links-container.visible {
          display: block;
          }
+         .links-list {
+         position: absolute;
+         }
+
       </style>
       <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
    </head>
@@ -34,14 +38,16 @@
                   <h2>Software Engineer</h2>
                </div>
                <div class="col-md-4 text-right">
-                  <button id="toggleLinksBtn">My links: </button>
-                  <div class="links-container" id="linksContainer">
-                     <p><i class="fas fa-envelope"></i> <a href="mailto:jonathancirillo@outlook.com">jonathancirillo@outlook.com</a></p>
-                     <p><i class="fas fa-phone"></i> <a href="tel:4077181174">407.718.1174</a></p>
-                     <p><i class="fas fa-map-marker-alt"></i> Orlando, FL</p>
-                     <p><i class="fab fa-github"></i> <a href="https://github.com/cirillojon">github.com/cirillojon</a></p>
-                     <p><i class="fab fa-linkedin-in"></i> <a href="https://www.linkedin.com/in/jonathan-cirillo/">linkedin.com/in/jonathan-cirillo/</a></p>
-                     <p><i class="fas fa-file-download"></i> <a href="images/Resume.pdf" download>Download Resume</a></p>
+               <button id="toggleLinksBtn">My links: </button>
+               <div class="links-container" id="linksContainer">
+                   <ul class="links-list">
+                       <li><i class="fas fa-envelope"></i> <a href="mailto:jonathancirillo@outlook.com">jonathancirillo@outlook.com</a></li>
+                       <li><i class="fas fa-phone"></i> <a href="tel:4077181174">407.718.1174</a></li>
+                       <li><i class="fas fa-map-marker-alt"></i> Orlando, FL</li>
+                       <li><i class="fab fa-github"></i> <a href="https://github.com/cirillojon">github.com/cirillojon</a></li>
+                       <li><i class="fab fa-linkedin-in"></i> <a href="https://www.linkedin.com/in/jonathan-cirillo/">linkedin.com/in/jonathan-cirillo/</a></li>
+                       <li><i class="fas fa-file-download"></i> <a href="images/Resume.pdf" download>Download Resume</a></li>
+                   </ul>
                   </div>
                </div>
             </div>
