--- a/public/index.html
+++ b/public/index.html
@@ -41,12 +41,10 @@
                <button id="toggleLinksBtn">My links: </button>
                <div class="links-container" id="linksContainer">
                    <ul class="links-list">
-                       <li><i class="fas fa-envelope"></i> <a href="mailto:jonathancirillo@outlook.com">jonathancirillo@outlook.com</a></li>
-                       <li><i class="fas fa-phone"></i> <a href="tel:4077181174">407.718.1174</a></li>
-                       <li><i class="fas fa-map-marker-alt"></i> Orlando, FL</li>
-                       <li><i class="fab fa-github"></i> <a href="https://github.com/cirillojon">github.com/cirillojon</a></li>
-                       <li><i class="fab fa-linkedin-in"></i> <a href="https://www.linkedin.com/in/jonathan-cirillo/">linkedin.com/in/jonathan-cirillo/</a></li>
-                       <li><i class="fas fa-file-download"></i> <a href="images/Resume.pdf" download>Download Resume</a></li>
+                       <li><i class="fab fa-github"></i> <a href="https://github.com/cirillojon">github</a></li>
+                       <li><i class="fab fa-linkedin-in"></i> <a href="https://www.linkedin.com/in/jonathan-cirillo/">linkedin</a></li>
+                       <li><i class="fas fa-envelope"></i> <a href="mailto:jonathancirillo@outlook.com">email</a></li>
+                       <li><i class="fas fa-file-download"></i> <a href="images/Resume.pdf" download> resume</a></li>
                    </ul>
                   </div>
                </div>
