updated photo gallery

--- a/public/index.html
+++ b/public/index.html
@@ -382,7 +382,9 @@
             <!-- Photography -->
             <article id="Photography">
                <h2 class="major">Photography</h2>
+               <div id="image-gallery-wrapper">
                <div id="image-gallery"></div>
+               </div>
             </article>
             <!-- Contact Me -->
             <article id="Contact">
