made link list larger

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,11 @@
          }
          .links-list {
          position: absolute;
+         font-size: 1.2em; /* Adjust this value to control the font size */
+         }
+         .links-list li {
+         padding: 0.3em 0; /* Adjust the padding for more or less space around the items */
+         margin: 0.2em 0; /* Adjust the margin for more or less space between the items */
          }
       </style>
       <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
