--- a/public/index.html
+++ b/public/index.html
@@ -184,7 +184,7 @@
                   <li>Led development of a Spotify web and mobile application called ‘Trendify’ that allowed users to connect their account and view in-depth listening data & track information.</li>
                   <li>Utilized Spotify’s API to fetch data and implemented a secure user login system.</li>
                </ul>
-               <p><strong>Link to project:</strong> <a href="https://trendify-project.herokuapp.com/login">https://trendify-project.herokuapp.com/login</a></p>
+               <p><strong>Link to project:</strong> <a href="https://trendify-project.herokuapp.com">https://trendify-project.herokuapp.com</a></p>
                <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/Trendify-App">https://github.com/cirillojon/Trendify-App</a></p>
                <h2 class="major">Professor Contacts</h2>
                <span class="image main"><img src="images/Professor.png" alt="" /></span>
