--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
                   <li>Helped create an updated, more functional website for company using Bootstrap, HTML, CSS, and JavaScript</li>
                   <li>Assists with various duties aboard the food truck such as, taking orders, preparing food, cutting meats, carrying and loading equipment, daily sanitization of the work environment, and overall quality assurance</li>
                </ul>
-               <p><a href="https://www.facebook.com/PapaDieselsBBQ/">Link to company</a></p>
+               <p><a href="https://cirillojon.github.io/pdb/">Link to website</a></p>
                <h2 class="major">NBC Sports</h2>
                <span class="image main"><img src="images/NBC.png" alt="" /></span>
                <p><strong>Microphone Operator</strong><br>
@@ -157,7 +157,7 @@
                <h2 class="major">CuttingBoard</h2>
                <span class="image main"><img src="images/CB.jpg" alt="" /></span>
                <p><strong>Augmented Reality Cooking Simulator (Cutting Board) | 2023 </strong></p>
-               <p>Tools & Technologies: Unity, C#, Firebase, Figma, SpoonacularAPI</p>
+               <p><strong>Tools & Technologies:</strong> Unity, C#, Firebase, Figma, SpoonacularAPI</p>
                <ul>
                   <li>Member of startup.</li>
                   <li>Part of pitching team for UCF Joust Competition for Student Entrepreneurs. </li>
@@ -170,6 +170,7 @@
                <h2 class="major">Parallel ChessAI</h2>
                <span class="image main"><img src="images/chess.jpg" alt="" /></span>
                <p><strong> Java Chess Engine & Multi-threaded AI | 2023</strong><br />
+                  <p><strong>Tools & Technologies:</strong>Java, IntelliJ, LaTeX, Overleaf </p>
                   <br/>
                   • Developed a robust Java-based chess engine with a multi-threaded AI using alpha-beta-pruning.<br />
                   • Conducted research & presented results detailing runtime improvements made by parallelizing alpha-beta.
@@ -179,7 +180,7 @@
                <h2 class="major">Trendify</h2>
                <span class="image main"><img src="images/trendify.png" alt="" /></span>
                <p><strong>Spotify Web/Mobile Application | 2022</strong> </p>
-               <p>Tools & Technologies: MongoDB, Express, React, and Node.js, Jest, React Native, Android Studio, Expo, Lucidchart, and Heroku </p>
+               <p><strong>Tools & Technologies:</strong> MongoDB, Express, React, Node.js, Jest, React Native, Android Studio, Expo, Lucidchart, Heroku </p>
                <ul>
                   <li>Led development of a Spotify web and mobile application called ‘Trendify’ that allowed users to connect their account and view in-depth listening data & track information.</li>
                   <li>Utilized Spotify’s API to fetch data and implemented a secure user login system.</li>
@@ -189,7 +190,7 @@
                <h2 class="major">Professor Contacts</h2>
                <span class="image main"><img src="images/Professor.png" alt="" /></span>
                <p><strong>LAMP Stack Contact Manager | 2022</strong> </p>
-               <p>Tools & Technologies: Linux, Apache, MySQL, PHP, JavaScript, HTML, and CSS </p>
+               <p><strong>Tools & Technologies:</strong> Linux, Apache, MySQL, PHP, JavaScript, HTML, CSS </p>
                <ul>
                   <li>Led development of contact-manager web application. </li>
                   <li>Users can create, update, delete and view all their contacts. 
@@ -201,7 +202,7 @@
                <h2 class="major">Kaggle</h2>
                <span class="image main"><img src="images/kaggle.png" alt="" /></span>
                <p><strong> Kaggle Machine Learning Competitions | 2021</strong> </p>
-               <p>Tools & Technologies: Python, NumPy, Sklearn, Tensorflow, Keras, and Pandas </p>
+               <p><strong>Tools & Technologies:</strong> Python, NumPy, Sklearn, Tensorflow, Keras, and Pandas </p>
                <ul>
                   <li>Built a Convolutional Neural Network that classifies clothing on the Fashion-MNIST dataset with 94% accuracy</li>
                   <li>Constructed a Sequential Neural Network that predicts the atomization energy of molecules on the QM7 dataset</li>
@@ -211,7 +212,7 @@
                <h2 class="major">IBM Z Xplore</h2>
                <span class="image main"><img src="images/IBM.png" alt="" /></span>
                <p><strong> IBM Master the Mainframe Competiton | 2018</strong> </p>
-               <p>Tools & Technologies: REXX, COBOL, VSAM, REGEX, JCL, Python, Db2, SQL </p>
+               <p><strong>Tools & Technologies:</strong> REXX, COBOL, VSAM, REGEX, JCL, Python, Db2, SQL </p>
                <ul>
                   <li>Stage 2 Finalist in the annual IBM Master the Mainframe Competition now known as ‘IBM Z Xplore’</li>
                   <li>Received hands-on experience within the z/OS system utilizing a variety of technologies and programming languages</li>
@@ -220,7 +221,7 @@
                <h2 class="major">MIT Zero Robotics</h2>
                <span class="image main"><img src="images/Zero.png" alt="" /></span>
                <p><strong> MIT Zero Robotics Competition | 2017</strong> </p>
-               <p>Tools & Technologies: C, SPHERES Simulator </p>
+               <p><strong>Tools & Technologies:</strong> C, SPHERES Simulator </p>
                <ul>
                   <li> Member of team that reached final stages in the tournament
                   <li> Write code for satellites on the International Space Station to complete challenges</li>
