added useless facts

--- a/public/index.html
+++ b/public/index.html
@@ -383,6 +383,14 @@
                <!-- NASA APOD -->
                <h2 class="major">NASA Daily Pic</h2>
                <div id="nasa-apod" class="widget"></div>
+                <!-- Useless Facts -->
+               <h2 class="major">Useless Facts</h2>
+               <div id="useless-facts-widget" class="widget">
+                  <h3 id="fact-title">Random Useless Fact</h3>
+                  <p id="fact">Click a button below to get a useless fact!</p>
+                  <button id="randomFactBtn">Get Random Useless Fact</button>
+                  <button id="todaysFactBtn">Get Today's Useless Fact</button>
+               </div>    
             </article>
             <!-- Photography -->
             <article id="Photography">
@@ -456,5 +464,6 @@
       <script src="assets/js/loadImageGallery.js"></script>
       <script src="assets/js/threejsSetup.js"></script>
       <script src="assets/js/nasa-apod.js"></script>
+      <script src="assets/js/useless-facts.js"></script>
    </body>
 </html>
