--- a/public/index.html
+++ b/public/index.html
@@ -198,6 +198,19 @@
                </ul>
                <p><strong>Link to project: </strong> <a href="http://www.professorcontacts.com/">http://www.professorcontacts.com/</a></p>
                <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/Professor-Contacts">https://github.com/cirillojon/Professor-Contacts</a></p>
+               <h2 class="major">React Games</h2>
+               <span class="image main"><img src="images/React.png" alt="" /></span>
+               <p><strong>React Minigames Webapp </strong> </p>
+               <p><strong>Tools & Technologies: </strong> React.js, JavaScript, HTML, CSS, Netlify </p>
+               <ul>
+                  <li>Created to learn more about and mess around with React. </li>
+                  <li>Currently features various games, including: A Number Guesser, Rock Paper Scissors, Tic-Tac-Toe,  
+                     Card Matching, and Whac-A-Mole
+                  </li>
+                  <li>Will eventually turn this WebApp into something more substantial. </li>
+               </ul>
+               <p><strong>Link to project:</strong> <a href="https://react-app-sandbox.netlify.app">https://react-app-sandbox.netlify.app</a></p>
+               <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/react-app-sandbox">https://github.com/cirillojon/react-app-sandbox</a></p>
                <h2 class="major">Competitons</h2>
                <h2 class="major">Kaggle</h2>
                <span class="image main"><img src="images/kaggle.png" alt="" /></span>
