--- a/public/index.html
+++ b/public/index.html
@@ -203,11 +203,18 @@
                <p><strong>React Minigames Webapp </strong> </p>
                <p><strong>Tools & Technologies: </strong> React.js, JavaScript, HTML, CSS, Netlify </p>
                <ul>
-                  <li>Created to learn more about and mess around with React. </li>
-                  <li>Currently features various games, including: Number Guesser, Rock Paper Scissors, Tic-Tac-Toe,  
-                     Card Matching, and Whac-A-Mole
-                  </li>
-                  <li>Will eventually turn this WebApp into something more substantial. </li>
+                 <li>Created to learn more about and mess around with React.</li>
+                 <li>
+                    Currently features various games, including:
+                   <ul>
+                     <li>Number Guesser</li>
+                     <li>Rock Paper Scissors</li>
+                     <li>Tic-Tac-Toe</li>
+                     <li>Card Matching</li>
+                     <li>Whac-A-Mole</li>
+                   </ul>
+                 </li>
+                 <li>Will eventually turn this WebApp into something more substantial.</li>
                </ul>
                <p><strong>Link to project:</strong> <a href="https://react-app-sandbox.netlify.app">https://react-app-sandbox.netlify.app</a></p>
                <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/react-app-sandbox">https://github.com/cirillojon/react-app-sandbox</a></p>
