added snake to react games

--- a/public/index.html
+++ b/public/index.html
@@ -212,6 +212,7 @@
                      <li>Tic-Tac-Toe</li>
                      <li>Card Matching</li>
                      <li>Whac-A-Mole</li>
+                     <li>Snake</li>
                    </ul>
                  </li>
                  <li>Will eventually turn this WebApp into something more substantial.</li>
