--- a/public/index.html
+++ b/public/index.html
@@ -148,8 +148,7 @@
                </p>
                <ul>
                   <li>Former competitive chess player</li>
-                  <li>Hired by old coach to replace him to lead and teach the chess club </li>
-                  <li>Taught elementary school kids in an after-school setting</li>
+                  <li>Hired to teach chess strategy in an after-school setting</li>
                </ul>
             </article>
             <!-- Projects -->
@@ -167,7 +166,7 @@
                   <li>Implemented GLTFUtility plugin to instantiate 3D models into Unity app during runtime from cloud-storage.</li>
                </ul>
                <p><strong>Link to website: </strong> <a href="https://arcuttingboard.com/">arcuttingboard.com</a></p>
-               <h2 class="major">Parallel ChessAI</h2>
+               <h2 class="major">Parallel Chess AI</h2>
                <span class="image main"><img src="images/chess.jpg" alt="" /></span>
                <p><strong> Java Chess Engine & Multi-threaded AI | 2023</strong><br />
                   <p><strong>Tools & Technologies: </strong>Java, IntelliJ, LaTeX, Overleaf </p>
