--- a/public/index.html
+++ b/public/index.html
@@ -212,6 +212,8 @@
                      <li>Card Matching</li>
                      <li>Whac-A-Mole</li>
                      <li>Snake</li>
+                     <li>Button Dodging</li>
+                     <li>WebGL Unity Game</li>
                    </ul>
                  </li>
                  <li>Will eventually turn this WebApp into something more substantial.</li>
