--- a/public/index.html
+++ b/public/index.html
@@ -419,7 +419,32 @@
                <h2 class="major">Google Maps</h2>
                <div id="google-maps-widget" class="widget">
                <div id="map" style="height: 400px; width: 100%;"></div>
-               </div>    
+               </div>
+               <!-- Sports Scoreboard -->
+               <h2 class="major">Recent Texas Games</h2>
+               <div id="sports-scoreboard-widget" class="widget" style="display: flex; flex-direction: column;">
+                  <!-- <select id="league-selector" style="margin-bottom: 10px;"></select> -->
+                  <div id="scoreboard" style="display: flex; flex-direction: column;">
+                     <ul id="events-list"></ul> 
+                  </div>
+               </div>
+               <!-- GitHub Progress -->
+            <h2 class="major">GitHub Progress</h2>
+            <div id="github-progress-widget" class="widget" style="display: flex; flex-direction: column;">
+               <h3 id="github-username"></h3>
+               <p id="github-repos">Repositories: </p>
+               <p id="github-followers">Followers: </p>
+               <!-- <p id="github-commits">Commits:: </p> -->
+            </div>
+            <div>
+               <!-- LeetCode Progress -->
+               <h2 class="major">LeetCode Progress</h2>
+               <div id="leetcode-progress-widget" class="widget" style="display: flex; flex-direction: column;">
+                   <h3>LeetCode Username: <span id="leetcode-username"></span></h3>
+                   <p>Problems Solved: <span id="leetcode-solved"></span></p>
+                   <p>Total Problems: <span id="leetcode-total"></span></p>
+                   <p>Completion Percentage: <span id="leetcode-completion"></span>%</p>
+            </div>
             </article>
             <!-- Photography -->
             <article id="Photography">
@@ -494,5 +519,8 @@
       <script src="assets/js/threejsSetup.js"></script>
       <script src="assets/js/nasa-apod.js"></script>
       <script src="assets/js/useless-facts.js"></script>
+      <script src="assets/js/sports.js"></script>
+      <script src="assets/js/github.js"></script>
+      <script src="assets/js/leetcode.js"></script>
    </body>
 </html>
