--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,8 @@
                         <li><i class="fab fa-github"></i> <a href="https://github.com/cirillojon">github</a></li>
                         <li><i class="fab fa-linkedin-in"></i> <a href="https://www.linkedin.com/in/jonathan-cirillo/">linkedin</a></li>
                         <li><i class="fas fa-envelope"></i> <a href="mailto:jonathancirillo@outlook.com">email</a></li>
-                        <li><i class="fas fa-file-download"></i> <a href="images/Resume.pdf" download> resume</a></li>
+                        <!-- <li><i class="fas fa-file-download"></i> <a href="images/Resume.pdf" download> resume</a></li> -->
+                        <li><i class="fas fa-file-download"></i> <a href="images/VS_Resume.pdf" download> resume</a></li>
                      </ul>
                   </div>
                </div>
@@ -86,17 +87,17 @@
          <div id="main">
             <!-- Work Experience -->
             <article id="WorkExperience">
-               <h2 class="major">F5 Networks</h2>
+               <!-- <h2 class="major">F5 Networks</h2>
                <span class="image main"><img src="images/F5.png" alt="" /></span>
                <p><strong>Software Engineer</strong><br>
                   Starting in Aug 2023 | Seattle, WA<br>
                   <a href="https://www.f5.com/">Link to company</a>
-               </p>
+               </p> -->
                <h2 class="major">VS&Co.</h2>
                <span class="image main"><img src="images/VS.png" alt="" /></span>
                <p>
                   <strong>Credit/Payments Applications Developer Intern</strong><br />
-                  Aug 2022 – Aug 2023 | Remote<br />
+                  Aug 2022 – Present | Remote<br />
                <ul>
                   <li>A part of team responsible for investigating 100% of software issues affecting store registers & pin-pads.</li>
                   <li>Employ PowerShell scripts to process logs & investigate root causes of bugs affecting millions of customers.</li>
