--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
                         <li><i class="fab fa-linkedin-in"></i> <a href="https://www.linkedin.com/in/jonathan-cirillo/">linkedin</a></li>
                         <li><i class="fas fa-envelope"></i> <a href="mailto:jonathancirillo@outlook.com">email</a></li>
                         <!-- <li><i class="fas fa-file-download"></i> <a href="images/Resume.pdf" download> resume</a></li> -->
-                        <li><i class="fas fa-file-download"></i> <a href="images/VS_Resume.pdf" download> resume</a></li>
+                        <li><i class="fas fa-file-download"></i> <a href="images/Updated_Resume.pdf" download> resume</a></li>
                      </ul>
                   </div>
                </div>
