--- a/public/index.html
+++ b/public/index.html
@@ -377,11 +377,23 @@
                <!-- LeetCode Progress -->
                <h2 class="major">LeetCode Progress</h2>
                <div id="leetcode-progress-widget" class="widget" style="display: flex; flex-direction: column;">
-                     <h3>LeetCode Username: <span id="leetcode-username"></span></h3>
-                     <p>Problems Solved: <span id="leetcode-solved"></span></p>
-                     <p>Total Problems: <span id="leetcode-total"></span></p>
-                     <p>Completion Percentage: <span id="leetcode-completion"></span>%</p>
-            </div>
+               <h3>
+                  LeetCode Stats: 
+               </h3>
+               <p>Problems Solved: <span id="leetcode-solved"></span></p>
+               <p>Total Problems: <span id="leetcode-total"></span></p>
+               <p>Completion Percentage: <span id="leetcode-completion"></span>%</p>
+               <p>
+                  <a href="https://github.com/cirillojon/Problem-Solving" target="_blank">
+                     View my solved problems on GitHub
+                  </a>
+               </p>
+               <p>
+                  <a id="leetcode-username-link" href="https://leetcode.com/joncirillo/" target="_blank">
+                     View my LeetCode profile
+                  </a>
+               </p>
+               </div>
                <!-- Trivia -->
                <div class="trivia-widget">
                   <h2 class="major">Trivia</h2>
@@ -444,6 +456,11 @@
                <p id="github-repos">Repositories: </p>
                <p id="github-followers">Followers: </p>
                <!-- <p id="github-commits">Commits:: </p> -->
+               <p>
+                  <a href="https://github.com/cirillojon/" target="_blank">
+                     View my GitHub Profile
+                  </a>
+               </p>
             </div>
             <div>
 
