remove commits for now

--- a/public/index.html
+++ b/public/index.html
@@ -455,7 +455,7 @@
                <h3 id="github-username"></h3>
                <p id="github-repos">Repositories: </p>
                <p id="github-followers">Followers: </p>
-               <p id="github-commits">Commits: </p>
+               <!-- <p id="github-commits">Commits: </p> -->
                <p>
                   <a href="https://github.com/cirillojon/" target="_blank">
                   View my GitHub Profile
