--- a/public/index.html
+++ b/public/index.html
@@ -87,12 +87,12 @@
       <div id="main">
          <!-- Work Experience -->
          <article id="WorkExperience">
-            <!-- <h2 class="major">F5 Networks</h2>
+            <h2 class="major">F5 Networks</h2>
                <span class="image main"><img src="images/F5.png" alt="" /></span>
                <p><strong>Software Engineer</strong><br>
                   Starting in Aug 2023 | Seattle, WA<br>
                   <a href="https://www.f5.com/">Link to company</a>
-               </p> -->
+               </p>
             <h2 class="major">VS&Co.</h2>
             <span class="image main"><img src="images/VS.png" alt="" /></span>
             <p>
