--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
                <strong>Credit/Payments Applications Developer Intern</strong><br />
                Aug 2022 – Present | Remote<br />
             <ul>
-               <li>A part of team responsible for investigating 100% of software issues affecting store registers & pin-pads.</li>
+               <li>A part of team responsible for investigating software issues affecting store registers & pin-pads.</li>
                <li>Employ PowerShell scripts to process logs & investigate root causes of bugs affecting millions of customers.</li>
                <li>Identified a malfunctioning API in production impacting card applicants, prompting fixes sent to all stores.</li>
                <li>Discovered issue with firewall implementation causing thousands of transactions to not reach cloud database.</li>
