--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
                <li>A part of team responsible for investigating software issues affecting store registers & pin-pads.</li>
                <li>Employ PowerShell scripts to process logs & investigate root causes of bugs affecting millions of customers.</li>
                <li>Identified a malfunctioning API in production impacting card applicants, prompting fixes sent to all stores.</li>
-               <li>Discovered issue with firewall implementation causing thousands of transactions to not reach cloud database.</li>
+               <li>Discovered an issue with firewall implementation causing thousands of transactions to not reach cloud database.</li>
             </ul>
             <strong>Application and Software Engineer/Developer Intern</strong><br />
             May 2022 – Aug 2022 | Remote<br />
