--- a/public/index.html
+++ b/public/index.html
@@ -305,7 +305,8 @@
                <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</a> • 
                <a href="https://www.python.org/">Python</a> • 
                <a href="https://www.sqltutorial.org/">SQL</a> • 
-               <a href="https://www.latex-project.org/">LaTeX</a>
+               <a href="https://www.latex-project.org/">LaTeX</a> •
+               <a href="https://go.dev/">Go</a> •
             </p>
             <p><strong>Data Management & Tools:</strong>
                <a href="https://www.mongodb.com/">MongoDB</a> • 
@@ -316,6 +317,7 @@
                <a href="https://github.com/">GitHub</a> • 
                <a href="https://www.atlassian.com/software/jira">Jira</a> • 
                <a href="https://bitbucket.org/">Bitbucket</a>
+               <a href="https://www.docker.com/">Docker</a> •
             </p>
             <p><strong>Libraries, Frameworks, & IDEs:</strong> 
                <a href="https://reactjs.org/">React.js</a> • 
