--- a/public/index.html
+++ b/public/index.html
@@ -306,7 +306,7 @@
                <a href="https://www.python.org/">Python</a> • 
                <a href="https://www.sqltutorial.org/">SQL</a> • 
                <a href="https://www.latex-project.org/">LaTeX</a> •
-               <a href="https://go.dev/">Go</a> •
+               <a href="https://go.dev/">Go</a> 
             </p>
             <p><strong>Data Management & Tools:</strong>
                <a href="https://www.mongodb.com/">MongoDB</a> • 
