--- a/public/index.html
+++ b/public/index.html
@@ -316,8 +316,8 @@
                <a href="https://azure.microsoft.com/">Azure</a> • 
                <a href="https://github.com/">GitHub</a> • 
                <a href="https://www.atlassian.com/software/jira">Jira</a> • 
-               <a href="https://bitbucket.org/">Bitbucket</a>
-               <a href="https://www.docker.com/">Docker</a> •
+               <a href="https://bitbucket.org/">Bitbucket</a> •
+               <a href="https://www.docker.com/">Docker</a> 
             </p>
             <p><strong>Libraries, Frameworks, & IDEs:</strong> 
                <a href="https://reactjs.org/">React.js</a> • 
