--- a/public/index.html
+++ b/public/index.html
@@ -159,7 +159,7 @@
             <p><strong>Augmented Reality Cooking Simulator (CuttingBoard) | 2023 </strong></p>
             <p><strong>Tools & Technologies: </strong> Unity, C#, Python, Firebase, Figma, Blender, SpoonacularAPI</p>
             <ul>
-               <li>Member of startup.</li>
+               <li>Lead backend developer at startup.</li>
                <li>Part of pitching team for UCF Joust Competition for Student Entrepreneurs. </li>
                <li>Currently working as backend developer, responsible for API and database integration.</li>
                <li>Developed API calls to fetch recipe information, seamlessly integrating data into the application.</li>
