--- a/public/index.html
+++ b/public/index.html
@@ -222,6 +222,15 @@
             </ul>
             <p><strong>Link to project:</strong> <a href="https://react-app-sandbox.netlify.app">https://react-app-sandbox.netlify.app</a></p>
             <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/react-app-sandbox">https://github.com/cirillojon/react-app-sandbox</a></p>
+            <h2 class="major">Go Microservice</h2>
+            <span class="image main"><img src="images/go-docker.jpg" alt="" /></span>
+            <p><strong>Calculation Service written in Go </strong> </p>
+            <p><strong>Tools & Technologies: </strong> Go, MongoDB, Go-Kit, Docker, Kubernetes </p>
+            <ul>
+               <li>This service supports basic mathematical operations such as: addition, subtraction, multiplication, and division.</li>
+               <li>The service also logs each operation performed to a MongoDB Atlas database.</li>
+            </ul>
+            <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/go-microservice-testing">https://github.com/cirillojon/react-app-sandbox</a></p>
             <h2 class="major">Competitons</h2>
             <h2 class="major">Kaggle</h2>
             <span class="image main"><img src="images/kaggle.png" alt="" /></span>
