--- a/public/index.html
+++ b/public/index.html
@@ -230,7 +230,18 @@
                <li>This service supports basic mathematical operations such as: addition, subtraction, multiplication, and division.</li>
                <li>The service also logs each operation performed to a MongoDB Atlas database.</li>
             </ul>
-            <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/go-microservice-testing">https://github.com/cirillojon/react-app-sandbox</a></p>
+            <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/go-microservice-testing">https://github.com/cirillojon/go-microservice-testing</a></p>
+            <h2 class="major">Flutter + Firebase App</h2>
+            <span class="image main"><img src="images/flutter-fire.png" alt="" /></span>
+            <p><strong>Web app built using Flutter with a Firebase Backend</strong> </p>
+            <p><strong>Tools & Technologies: </strong> Flutter, Dart, Firebase </p>
+            <ul>
+               <li>The application was built to practice flutter and learn how to implement Google Auth using Oath 2.0</li>
+               <li>Firebase Authentication is used for handling user sign-in, and Firebase Hosting is used to deploy the web application.</li>
+               <li>Google's sign-in API is integrated to allow users to sign in with their Google accounts.</li>
+            </ul>
+            <p><strong>Link to Project:</strong> <a href="https://flutter-6cac9.web.app/#/">https://flutter-6cac9.web.app/#/</a></p>
+            <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/flutter-app">https://github.com/cirillojon/flutter-app</a></p>
             <h2 class="major">Competitons</h2>
             <h2 class="major">Kaggle</h2>
             <span class="image main"><img src="images/kaggle.png" alt="" /></span>
