--- a/public/index.html
+++ b/public/index.html
@@ -242,6 +242,17 @@
             </ul>
             <p><strong>Link to Project:</strong> <a href="https://flutter-6cac9.web.app/#/">https://flutter-6cac9.web.app/#/</a></p>
             <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/flutter-app">https://github.com/cirillojon/flutter-app</a></p>
+            <h2 class="major">Svelte + TypeScript</h2>
+            <span class="image main"><img src="images/svelte-ts.png" alt="" /></span>
+            <p><strong>Web app built using Svelte and TypeScript</strong> </p>
+            <p><strong>Tools & Technologies: </strong> Svelte, TypeScript, Vite, ThreeJs</p>
+            <ul>
+               <li>The application was built to practice TypeScript and learn how to use Svelte</li>
+               <li>Currently offers a coin flip betting game that allows users to purchase ThreeJs objects with winnings</li>
+               <li>Will turn this into something more substantial.</li>
+            </ul>
+            <p><strong>Link to Project:</strong> <a href="https://in-the-works.netlify.app/">https://in-the-works.netlify.app/</a></p>
+            <p><strong>Link to GitHub repository:</strong> <a href="https://in-the-works.netlify.app/">https://in-the-works.netlify.app/</a></p>
             <h2 class="major">Competitons</h2>
             <h2 class="major">Kaggle</h2>
             <span class="image main"><img src="images/kaggle.png" alt="" /></span>
