--- a/public/index.html
+++ b/public/index.html
@@ -252,7 +252,7 @@
                <li>Will turn this into something more substantial.</li>
             </ul>
             <p><strong>Link to Project:</strong> <a href="https://in-the-works.netlify.app/">https://in-the-works.netlify.app/</a></p>
-            <p><strong>Link to GitHub repository:</strong> <a href="https://in-the-works.netlify.app/">https://in-the-works.netlify.app/</a></p>
+            <p><strong>Link to GitHub repository:</strong> <a href=https://github.com/cirillojon/something-great">https://github.com/cirillojon/something-great</a></p>
             <h2 class="major">Competitons</h2>
             <h2 class="major">Kaggle</h2>
             <span class="image main"><img src="images/kaggle.png" alt="" /></span>
