--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,6 @@
             <span class="image main"><img src="images/chess.jpg" alt="" /></span>
             <p><strong> Java Chess Engine & Multi-threaded AI | 2023</strong><br />
             <p><strong>Tools & Technologies: </strong>Java, IntelliJ, LaTeX, Overleaf </p>
-            <br/>
             • Developed a robust Java-based chess engine with a multi-threaded AI using alpha-beta-pruning.<br />
             • Conducted research & presented results detailing runtime improvements made by parallelizing alpha-beta.
             </p>
@@ -181,13 +180,32 @@
             <h2 class="major">Trendify</h2>
             <span class="image main"><img src="images/trendify.png" alt="" /></span>
             <p><strong>Spotify Web/Mobile Application | 2022</strong> </p>
-            <p><strong>Tools & Technologies: </strong> MongoDB, Express, React, Node.js, Jest, React Native, Android Studio, Expo, Lucidchart, Heroku </p>
+            <p><strong>Tools & Technologies: </strong> MongoDB, Express, React, Node.js, Jest, React Native, Android Studio, Expo, Lucidchart</p>
             <ul>
                <li>Led development of a Spotify web and mobile application called ‘Trendify’ that allowed users to connect their account and view in-depth listening data & track information.</li>
                <li>Utilized Spotify’s API to fetch data and implemented a secure user login system.</li>
             </ul>
             <p><strong>Link to project:</strong> <a href="https://trendify-project.herokuapp.com">https://trendify-project.herokuapp.com</a></p>
             <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/Trendify-App">https://github.com/cirillojon/Trendify-App</a></p>
+            <h2 class="major">Portfolio Website</h2>
+            <span class="image main"><img src="images/html5-css3.jpg" alt="" /></span>
+            <p><strong>Portfolio Site built using HTML5 and CSS3</strong> </p>
+            <p><strong>Tools & Technologies: </strong> HTML5, CSS3, SCSS, JavaScript, ThreeJS, Node.js, Express</p>
+            <ul>
+               <li>See Sandbox tab for some random features such as:</li>
+               <ul>
+                  <li><strong>Weather Fetcher</strong>: Get the current weather for any city using the <a href="https://openweathermap.org/api">OpenWeatherMap API</a>.</li>
+                  <li><strong>Trivia Game</strong>: Test your knowledge with a trivia game powered by the <a href="https://opentdb.com/api_config.php">OpenTDB API</a>.</li>
+                  <li><strong>Random Joke</strong>: Enjoy a random joke fetched from the <a href="https://jokeapi.dev/">JokeAPI</a> using their REST API.</li>
+                  <li><strong>ChatGPT Chatbot</strong>: Interact with an AI-powered chatbot using the <a href="https://beta.openai.com/docs/">OpenAI API</a>.</li>
+                  <li><strong>NASA Astronomy Picture of the Day</strong>: Discover NASA's featured image of the day using their <a href="https://api.nasa.gov/#apod">APOD API</a>.</li>
+                  <li><strong>Three.js</strong>: Rotating 3D cube & torus on the landing page, created using <a href="https://threejs.org/">Three.js</a>.</li>
+                  <li><strong>Useless Facts</strong>: Get random or today's useless fact using the <a href="https://uselessfacts.jsph.pl/">Useless Facts API</a>.</li>
+                  <li><strong>Google Maps</strong>: Explore a map centered on New York City using the <a href="https://developers.google.com/maps/documentation/javascript/overview">Google Maps JavaScript API</a>.</li>
+               </ul>
+            </ul>
+            <p><strong>Link to Project:</strong> <a href="https://cirillojon.herokuapp.com/">https://cirillojon.herokuapp.com/</a></p>
+            <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/Portfolio-Heroku">https://github.com/cirillojon/Portfolio-Heroku</a></p>
             <h2 class="major">Professor Contacts</h2>
             <span class="image main"><img src="images/Professor.png" alt="" /></span>
             <p><strong>LAMP Stack Contact Manager | 2022</strong> </p>
@@ -253,6 +271,16 @@
             </ul>
             <p><strong>Link to Project:</strong> <a href="https://in-the-works.netlify.app/">https://in-the-works.netlify.app/</a></p>
             <p><strong>Link to GitHub repository:</strong> <a href=https://github.com/cirillojon/something-great">https://github.com/cirillojon/something-great</a></p>
+            <h2 class="major">MIPS Processor Emulator</h2>
+            <span class="image main"><img src="images/C.jpg" alt="" /></span>
+            <p><strong>MIPS Processor Emulator written in C</strong> </p>
+            <p><strong>Tools & Technologies: </strong> C, MIPS </p>
+            <ul>
+               <li>This code is a simple model of the MIPS Instruction Set Architecture (ISA) implemented in C. </li>
+               <li>This program simulates the execution of a MIPS binary program.</li>
+               <li>Operations of a MIPS CPU are implemented, including: fetch, decode, and execution of instructions, memory reads/writes, and register reads/writes.</li>
+            </ul>
+            <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/MIPS-Processor-Emulator">https://github.com/cirillojon/MIPS-Processor-Emulator</a></p>
             <h2 class="major">Competitons</h2>
             <h2 class="major">Kaggle</h2>
             <span class="image main"><img src="images/kaggle.png" alt="" /></span>
