--- a/public/index.html
+++ b/public/index.html
@@ -188,7 +188,7 @@
             <p><strong>Link to project:</strong> <a href="https://trendify-project.herokuapp.com">https://trendify-project.herokuapp.com</a></p>
             <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/Trendify-App">https://github.com/cirillojon/Trendify-App</a></p>
             <h2 class="major">Portfolio Website</h2>
-            <span class="image main"><img src="images/html5-css3.jpg" alt="" /></span>
+            <span class="image main"><img src="images/html.PNG" alt="" /></span>
             <p><strong>Portfolio Site built using HTML5 and CSS3</strong> </p>
             <p><strong>Tools & Technologies: </strong> HTML5, CSS3, SCSS, JavaScript, ThreeJS, Node.js, Express</p>
             <ul>
@@ -249,7 +249,7 @@
                <li>The service also logs each operation performed to a MongoDB Atlas database.</li>
             </ul>
             <p><strong>Link to GitHub repository:</strong> <a href="https://github.com/cirillojon/go-microservice-testing">https://github.com/cirillojon/go-microservice-testing</a></p>
-            <h2 class="major">Flutter + Firebase App</h2>
+            <h2 class="major">Flutter + Firebase</h2>
             <span class="image main"><img src="images/flutter-fire.png" alt="" /></span>
             <p><strong>Web app built using Flutter with a Firebase Backend</strong> </p>
             <p><strong>Tools & Technologies: </strong> Flutter, Dart, Firebase </p>
@@ -271,7 +271,7 @@
             </ul>
             <p><strong>Link to Project:</strong> <a href="https://in-the-works.netlify.app/">https://in-the-works.netlify.app/</a></p>
             <p><strong>Link to GitHub repository:</strong> <a href=https://github.com/cirillojon/something-great">https://github.com/cirillojon/something-great</a></p>
-            <h2 class="major">MIPS Processor Emulator</h2>
+            <h2 class="major">MIPS Processor</h2>
             <span class="image main"><img src="images/C.jpg" alt="" /></span>
             <p><strong>MIPS Processor Emulator written in C</strong> </p>
             <p><strong>Tools & Technologies: </strong> C, MIPS </p>
